tests/failures/no_output.rs
use auto_vec::auto_vec;

#[auto_vec]
fn foo(a: usize) { }

fn main() {}